--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"localforage": "^1.10.0",
 		"react": "^18.2.0",
 		"react-bootstrap": "^2.9.1",
+		"react-bootstrap-icons": "^1.10.3",
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.1.3",
 		"react-router-dom": "^6.18.0",
