--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@types/react": "^18.2.33",
 		"@types/react-dom": "^18.2.14",
 		"antd": "^5.11.1",
+		"axios": "^1.6.2",
 		"bootstrap": "^5.3.2",
 		"localforage": "^1.10.0",
 		"react": "^18.2.0",
