--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"react-router-dom": "^6.18.0",
 		"react-scripts": "5.0.1",
 		"redux": "^4.2.1",
+		"redux-persist": "^6.0.0",
 		"typescript": "^4.9.5",
 		"web-vitals": "^2.1.4"
 	},
@@ -49,5 +50,8 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"@types/redux-persist": "^4.3.1"
 	}
 }
