--- a/package.json
+++ b/package.json
@@ -3,18 +3,22 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@ant-design/react-slick": "^1.0.2",
 		"@reduxjs/toolkit": "^1.9.7",
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"@types/jest": "^27.5.2",
+		"@types/moment": "^2.13.0",
 		"@types/node": "^16.18.59",
 		"@types/react": "^18.2.33",
 		"@types/react-dom": "^18.2.14",
 		"antd": "^5.12.8",
 		"axios": "^1.6.2",
 		"bootstrap": "^5.3.2",
+		"dayjs": "^1.11.10",
 		"localforage": "^1.10.0",
+		"moment": "^2.30.1",
 		"react": "^18.2.0",
 		"react-bootstrap": "^2.9.1",
 		"react-bootstrap-icons": "^1.10.3",
