--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
 		"@types/moment": "^2.13.0",
 		"@types/node": "^16.18.59",
 		"@types/react": "^18.2.33",
+		"@types/react-chartjs-2": "^2.5.7",
 		"@types/react-dom": "^18.2.14",
 		"antd": "^5.12.8",
 		"axios": "^1.6.2",
 		"bootstrap": "^5.3.2",
+		"chart.js": "^4.4.1",
 		"dayjs": "^1.11.10",
 		"localforage": "^1.10.0",
 		"moment": "^2.30.1",
 		"react": "^18.2.0",
 		"react-bootstrap": "^2.9.1",
 		"react-bootstrap-icons": "^1.10.3",
+		"react-chartjs-2": "^5.2.0",
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.1.3",
 		"react-router-dom": "^6.18.0",
