--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"react-redux": "^8.1.3",
 		"react-router-dom": "^6.18.0",
 		"react-scripts": "5.0.1",
+		"react-transition-group": "^4.4.5",
 		"redux": "^4.2.1",
 		"redux-persist": "^6.0.0",
 		"typescript": "^4.9.5",
